[gd_scene load_steps=2 format=3 uid="uid://nbaodrlopo7y"]

[ext_resource type="Script" path="res://ui/components/GameSettings.gd" id="1_eje8l"]

[node name="GameSettings" type="VBoxContainer"]
script = ExtResource("1_eje8l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 8
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Volume global"

[node name="MasterVolumeSlider" type="HSlider" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Musique"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="SoundVolumeLabel" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Effets sonores"

[node name="SoundVolumeSlider" type="HSlider" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="FullscreenLabel" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Plein Ã©cran"

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[connection signal="value_changed" from="MarginContainer/GridContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/GridContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
